# pagemagic

./: .env.example  .eslintrc.js  .gitignore  .lintstagedrc.js  ANALYSIS_CONCLUSION.md  CONTRIBUTING.md  END_TO_END_IMPLEMENTATION_PLAN.md  ENTERPRISE_IMPLEMENTATION_PLAN.md  FOCUSED_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_IMPLEMENTATIONS.md  Makefile  NEXT_STEPS.md  PROGRESS_REPORT.md  PROMPT_SVC_SUCCESS.md  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.yml  documento-de-engenharia.md  package.json  tsconfig.json  turbo.json
.github/workflows/: ci-cd.yml
.husky/: pre-push
apps/front-web/: next.config.js  package.json  tailwind.config.js
apps/front-web/src/app/: layout.tsx  page.tsx
apps/front-web/src/app/editor/: page.tsx
apps/front-web/src/components/: SiteManager.tsx
apps/front-web/src/hooks/: useAuth.tsx  useBuildService.ts  useWebSocket.ts
apps/front-web/src/services/: api.ts
apps/front-web/src/store/: authStore.ts  projectStore.ts
apps/front-web/src/types/: hosting.ts
apps/mobile-app/: app.json  package.json
apps/mobile-app/src/components/: ProjectCard.tsx
apps/mobile-app/src/screens/: ProjectsScreen.tsx
apps/mobile-app/src/services/: api.ts
apps/mobile-app/src/store/: auth.ts
apps/mobile-app/src/types/: index.ts
docs/: TECHNICAL.md
infrastructure/database/: init.sql  migrations.sql  seed.sql  timescale-init.sql
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
infrastructure/k8s/base/: namespace.yaml
infrastructure/k8s/istio/: service-mesh.yaml
infrastructure/k8s/monitoring/: grafana.yaml  prometheus.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/nginx/: nginx.conf
infrastructure/sql/: init-db.sql
scripts/: setup-dev.sh  setup.sh
services/auth-svc/: Dockerfile  go.mod  main-enterprise.go  main.go
services/auth-svc/internal/app/: app.go
services/auth-svc/internal/config/: config.go
services/auth-svc/internal/handlers/: auth.go
services/auth-svc/internal/models/: auth.go  user.go
services/auth-svc/internal/repository/: implementations.go  postgres.go  repository.go
services/auth-svc/internal/services/: auth.go
services/billing-svc/: go.mod
services/billing-svc/cmd/: main.go
services/billing-svc/internal/handlers/: billing.go
services/billing-svc/internal/models/: billing.go
services/billing-svc/internal/services/: billing.go
services/build-svc/: Dockerfile  go.mod
services/build-svc/cmd/: main.go
services/build-svc/internal/app/: app.go
services/build-svc/internal/config/: config.go
services/build-svc/internal/handlers/: build.go  template.go
services/build-svc/internal/models/: build.go
services/build-svc/internal/services/: build.go  template.go
services/builder-svc/: Cargo.toml  Cargo.toml.backup  Dockerfile  package.json
services/builder-svc/configs/: default.yaml
services/builder-svc/migrations/: 001_initial_schema.sql
services/builder-svc/src/: config.rs  config_manager.rs  main-mvp.rs  main.rs  middleware_custom.rs  models.rs  server.ts  websocket.rs
services/builder-svc/src/handlers/: analytics.rs  auth.rs  builder.rs  health.rs  mod.rs  projects.rs  templates.rs  themes.rs  version_control.rs
services/builder-svc/src/models/: mod.rs
services/builder-svc/src/services/: ASTService.ts  analytics_service.rs  ast_service.rs  auth_service.rs  builder_service.rs  cache_service.rs  code_gen_service.rs  git_service.rs  mod.rs  notification_service.rs  optimization_service.rs  project_service.rs  template_service.rs  theme_service.rs  websocket_service.rs
services/builder-svc/src/utils/: color.rs  date.rs  mod.rs  string.rs
services/domain-svc/: Dockerfile  requirements.txt
services/domain-svc/src/: main.py
services/domain-svc/src/config/: settings.py
services/domain-svc/src/controllers/: domain.py
services/domain-svc/src/models/: domain.py
services/domain-svc/src/repositories/: interfaces.py  postgres.py
services/domain-svc/src/services/: acme.py  certificate.py  dns.py  namecheap.py
services/host-svc/: Dockerfile  go.mod
services/host-svc/cmd/: main.go
services/host-svc/internal/app/: app.go
services/host-svc/internal/config/: config.go
services/host-svc/internal/handlers/: deployment.go  domain.go  hosting.go  metrics.go
services/host-svc/internal/models/: hosting.go
services/host-svc/internal/services/: cache.go  deployment.go  domain.go  hosting.go  metrics.go
services/i18n-svc/: Dockerfile  package.json  server.js  tsconfig.json
services/i18n-svc/src/: index.ts
services/i18n-svc/src/controllers/: translation.ts
services/i18n-svc/src/models/: translation.ts
services/i18n-svc/src/routes/: translation.ts
services/i18n-svc/src/services/: translation.ts
services/i18n-svc/src/utils/: logger.ts
services/meter-svc/: Cargo.toml  Dockerfile
services/meter-svc/src/: config.rs  handlers.rs  main.rs  models.rs  services.rs
services/prompt-svc/: Dockerfile  package-lock.json  package.json  server.js  tsconfig.json
services/prompt-svc/src/: index-mvp.ts  index.ts  server-mvp.js
services/prompt-svc/src/config/: index.ts
services/prompt-svc/src/controllers/: GenerationController.ts  PromptController.ts
services/prompt-svc/src/routes/: generate.ts
services/prompt-svc/src/services/: AnalyticsService.ts  AnthropicService.ts  CacheService.ts  OpenAIService.ts  PromptService.ts  SiteGeneratorService.ts  TemplateService.ts
services/prompt-svc/src/types/: generation.ts  prompt.ts
services/prompt-svc/src/utils/: logger.ts
services/usage-proxy/: Dockerfile
services/usage-proxy/lua/: api_usage_tracker.lua  auth_check.lua  init.lua  init_worker.lua  metrics.lua  rate_limit.lua  usage_tracker.lua
services/usage-proxy/nginx/: nginx.conf
shared/schemas/: ai-generation.json  project.json  section.json
shared/types/: index.ts
shared/utils/: index.ts
(+2 files in other folders)
