[package]
name = "builder-svc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-br", "timeout", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client and authentication
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
jsonwebtoken = "9.0"

# Template engines and code generation
handlebars = "5.0"
tera = "1.19"
regex = "1.10"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Performance and caching
dashmap = "5.5"
once_cell = "1.19"
rayon = "1.8"
parking_lot = "0.12"

# Monitoring and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Configuration and environment
config = "0.14"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

# File system and compression
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
walkdir = "2.4"

# Security and validation
argon2 = "0.5"
ring = "0.17"
base64 = "0.21"
validator = { version = "0.16", features = ["derive"] }

# WebSocket and real-time features
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Image processing and assets
image = "0.24"
resvg = "0.37"

# HTML/CSS processing
scraper = "0.18"
cssparser = "0.31"

# Git operations
git2 = "0.18"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
mockall = "0.12"

# Additional dependencies
num_cpus = "1.16"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.7"
tempfile = "3.8"
serial_test = "3.0"

[features]
default = ["full"]
full = ["ai", "real-time", "analytics", "git", "themes", "optimization"]
ai = []
real-time = []
analytics = []
git = []
themes = []
optimization = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
