[package]
name = "meter-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-cron-scheduler = "0.9"
