[package]
name = "meter-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
async-nats = "0.33"
prometheus = "0.13"
futures = "0.3"
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2.9"
